# rustic-sketch

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  rustic.version
.circleci/: config.yml
.github/: dependabot.yml
docs/: Workspace.md
src/: health_check.rs  lib.rs  main.rs
src/health_check/: service_status.rs  version.rs
src/resources/: rustic.version
src/routes/: health_status.rs
src/routes/health_status/: model.rs
src/store/: postgres.rs
tests/: postgres_store.rs  public_contracts.rs  test_kit.rs  version_test.rs
tests/resources/contracts/health_check/: status_degraded.json  status_ok.json
tools/environments/: z.read.this.first.md
tools/environments/local/: rustic.env.vars.sh
tools/pipeline/docker/: build-and-tag-image.sh  publish-image.sh
tools/stack/: docker-compose.yml
tools/utilities/: env-vars-loader.sh
