[package]
name = "rustic_sketch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
git2 = "0.19.0"

[dependencies]
async-trait = "0.1.74"
derive_more = { version = "1.0.0", features = ["constructor", "display", "error"] }
futures = "0.3.29"
getset = "0.1.2"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio", "tls-rustls"] }
tokio = { version = "1.34.0", features = [ "full" ] }
warp = "0.3.6"

[dev-dependencies]
claims = "0.7.1"
proptest = "1.0.0"
serde_json = "1.0"
testcontainers = "0.23.1"
